MK7 Course Sorter
A MK7 course sorter.

--- a/index.html
+++ b/index.html
@@ -328,4 +328,4 @@ showImage();
 //-->
 </script></div>
 </div><div><br>
-<div align="center"><b>Mario Kart 7 Course Sorter</b><br><br><a href="http://infinitexo.weebly.com/ori.html">Code credit</a><br><iframe scrolling="no" width="1" height="1" frameborder="0" style="background-color:transparent; overflow:hidden; position:absolute; top:0; left:0; z-index:9999;" id="ga_target"></iframe>
+<div align="center"><b>Mario Kart 7 Course Sorter</b><br><br>I made this sorter by modifying a MK8 sorter which you can find <a href="http://skavalli.tumblr.com/mk8#_=_">here</a>. All credits to the original author.<br><iframe scrolling="no" width="1" height="1" frameborder="0" style="background-color:transparent; overflow:hidden; position:absolute; top:0; left:0; z-index:9999;" id="ga_target"></iframe>
