MKW/MK7 Course Sorter Site
A site to sort favorite tracks in Mario Kart Wii and Mario Kart 7.

--- a/mkw.html
+++ b/mkw.html
@@ -3,42 +3,42 @@
 <!--
 //*********************************************************
 //
-// Mario Kart 7 Course Sorter. I made it by modifying a similar one for Mario Kart 8 I found here: http://skavalli.tumblr.com/mk8#_=_
+// Mario Kart Wii Course Sorter. I made it by modifying a similar one for Mario Kart 8 I found here: http://skavalli.tumblr.com/mk8#_=_
 //
 //*********************************************************
 var namMember = new Array(
-"Toad Circuit",
-"Daisy Hills",
-"Cheep Cheep Lagoon",
-"Shy Guy Bazaar",
-"Wuhu Loop",
+"Luigi Circuit",
+"Moo Moo Meadows",
+"Mushroom Gorge",
+"Toad's Factory",
 "Mario Circuit",
-"Music Park",
-"Rock Rock Mountain",
-"Piranha Plant Slide",
-"Wario Shipyard",
-"Neo Bowser City",
-"Maka Wuhu",
-"DK Jungle",
-"Rosalina's Ice World",
+"Coconut Mall",
+"DK's Snowboard Cross",
+"Wario's Gold Mine",
+"Daisy Circuit",
+"Koopa Cape",
+"Maple Treeway",
+"Grumble Volcano",
+"Dry Dry Ruins",
+"Moonview Highway",
 "Bowser's Castle",
 "Rainbow Road",
-"N64 Luigi Raceway",
-"GBA Bowser Castle 1",
-"Wii Mushroom Gorge",
-"DS Luigi's Mansion",
-"N64 Koopa Troopa Beach",
-"SNES Mario Circuit 2",
-"Wii Coconut Mall",
-"DS Waluigi Pinball",
-"N64 Kalimari Desert",
-"DS DK Pass",
-"GCN Daisy Cruiser",
-"Wii Maple Treeway",
-"Wii Koopa Cape",
-"GCN Dino Dino Jungle",
-"DS Airship Fortress",
-"SNES Rainbow Road"
+"GCN Peach Beach",
+"DS Yoshi Falls",
+"SNES Ghost Valley 2",
+"N64 Mario Raceway",
+"N64 Sherbet Land",
+"GBA Shy Guy Beach",
+"DS Delfino Square",
+"GCN Waluigi Stadium",
+"DS Desert Hills",
+"GBA Bowser Castle 3",
+"N64 DK's Jungle Parkway",
+"GCN Mario Circuit",
+"SNES Mario Circuit 3",
+"DS Peach Gardens",
+"GCN DK Mountain",
+"N64 Bowser's Castle"
 );
 //*********************************************************
 var lstMember = new Array();
@@ -329,8 +329,8 @@ showImage();
 </script></div>
 </div><div>
 <br>
-<div align="center"><b>Mario Kart 7 Course Sorter</b>
+<div align="center"><b>Mario Kart Wii Course Sorter</b>
 <br><br>I made this sorter by modifying a MK8 sorter which you can find <a href="http://skavalli.tumblr.com/mk8#_=_">here</a>. All credits to the original author.
-<br><br>You can also find a MKW sorter <a href="mkw.html">here</a>.
+<br><br>You can also find a MK7 sorter <a href="index.html">here</a>.
 <br>
 <iframe scrolling="no" width="1" height="1" frameborder="0" style="background-color:transparent; overflow:hidden; position:absolute; top:0; left:0; z-index:9999;" id="ga_target"></iframe>
