MKW/MK7 Course Sorter
A simple track sorter for Mario Kart Wii and Mario Kart 7.

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@ a:hover{color:#99ccff;}
 </style>
 </head>
 <body text="#000000" bgcolor="#ffffff" link="#0099ff" vlink="#0099ff" alink="#0099ff">
+<div align="center"><img src="mariokart7.jpg"></div>
 <table id="mainTable" align="center">
 <tbody><tr>
 <td id="battleNumber" colspan="3" style="padding-bottom: 10px;" style="text-align:center;">Question No.1<br>0% sorted.</td>
@@ -327,7 +328,7 @@ initList();
 showImage();
 //-->
 </script></div>
-</div><div>
+</div>
 <br>
 <div align="center"><b>Mario Kart 7 Course Sorter</b>
 <br><br>I made this sorter by modifying a MK8 sorter which you can find <a href="http://skavalli.tumblr.com/mk8#_=_">here</a>. All credits to the original author.
