MKW/MK7 Course Sorter
A simple course sorter for Mario Kart Wii & Mario Kart 7.

--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@ text-decoration : none;
 a:hover{color:#99ccff;}
 -->
 </style>
+<head>
+<title>Mario Kart 7 Course Sorter</title>
 </head>
 <body text="#000000" bgcolor="#ffffff" link="#0099ff" vlink="#0099ff" alink="#0099ff">
 <div align="center"><img src="mariokart7.jpg"></div>
