MKW/MK7 Course Sorter
A simple course sorter for Mario Kart Wii & Mario Kart 7.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <font face="helvetica">
 <div><div id="603446273904584399" align="left" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><script type="text/javascript">
 <!--
@@ -337,3 +339,4 @@ showImage();
 <br><br>You can also find a MKW sorter <a href="mkw.html">here</a>.
 <br>
 <iframe scrolling="no" width="1" height="1" frameborder="0" style="background-color:transparent; overflow:hidden; position:absolute; top:0; left:0; z-index:9999;" id="ga_target"></iframe>
+</html>
