--- a/mkw.html
+++ b/mkw.html
@@ -335,8 +335,8 @@ showImage();
 </div>
 <br>
 <div align="center"><b>Mario Kart Wii Course Sorter</b>
-<br><br>I made this sorter by modifying a MK8 sorter which you can find <a href="http://skavalli.tumblr.com/mk8#_=_">here</a>. All credits to the original author.
-<br><br>You can also find a MK7 sorter <a href="index.html">here</a>.
+<br><br>All credits to the original author. Unfortunately his original submission seems to be gone from Tumblr, where it was originally posted. 
+<br><br>You can also find a MK7 sorter <a href="index.html">here</a>, and a MK8 sorter <a href="mk8.html">here</a>.
 <br>
 <iframe scrolling="no" width="1" height="1" frameborder="0" style="background-color:transparent; overflow:hidden; position:absolute; top:0; left:0; z-index:9999;" id="ga_target"></iframe>
 </html>
