--- a/mk8.html
+++ b/mk8.html
@@ -320,7 +320,7 @@ a:hover{color:#99ccff;}
 -->
 </style>
 <head>
-<title>Mario Kart 7 Course Sorter</title>
+<title>Mario Kart 8 (Deluxe) Course Sorter</title>
 </head>
 <body text="#000000" bgcolor="#ffffff" link="#0099ff" vlink="#0099ff" alink="#0099ff">
 <div align="center"><img src="mk8.jpg"></div>
