--- a/mk8.html
+++ b/mk8.html
@@ -352,6 +352,6 @@ showImage();
 <br>
 <div align="center"><b>Mario Kart 8 (Deluxe) Course Sorter</b>
 <br><br>All credits to the original author. Unfortunately his original submission seems to be gone from Tumblr, where it was originally posted.
-<br><br>You can also find a MKW sorter <a href="mkw.html">here</a>, a MK7 sorter <a href="mk7.html">here</a>, and a CTGP-7 sorter <a href="ctgp7.html">here</a>.
+<br><br>You can also find a MKW sorter <a href="mkw.html">here</a> and a MK7 sorter <a href="mk7.html">here</a>.
 <br>
 <iframe scrolling="no" width="1" height="1" frameborder="0" style="background-color:transparent; overflow:hidden; position:absolute; top:0; left:0; z-index:9999;" id="ga_target"></iframe>
